--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@
             margin-bottom: 1rem;
         }
 
+        hr {
+            margin: 2rem auto;
+        }
+
         @media(max-width: 550px) {
             main {
                 display: block;
