--- a/DAY 2/BonusDay2/bonusDay2.css
+++ b/DAY 2/BonusDay2/bonusDay2.css
@@ -60,7 +60,7 @@ body {
 }
 
 .progress {
-  background-color: var(--line-border-empty);
+  background-color: var(--line-border-fill);
   position: absolute;
   top: 50%;
   left: 0;
@@ -68,6 +68,19 @@ body {
   width: 0%;
   transform: translateY(-50%);
   z-index: -1;
+  transition: 0.4s ease;
+}
+
+.circle {
+  background-color: #ffffff;
+  color: var(--font-color);
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid var(--line-border-empty);
   transition: 0.4s ease;
 }
 
@@ -85,6 +98,10 @@ body {
   padding: 8px 30px;
   margin: 5px;
   font-size: 14px;
+}
+
+.btn.active {
+  transform: scale(0.98);
 }
 
 .btn:focus {
